--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -8,7 +8,7 @@
 .cards__list {
   box-sizing: border-box;
   list-style: none;
-  margin: 0;
+  margin: 0 0 40px 0;
   padding: 0;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(288px, 413px));
@@ -19,5 +19,6 @@
 @media screen and (max-width: 627px) {
   .cards__list {
     row-gap: 20px;
+    margin: 0 0 20px 0;
   }
 }
