--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -77,11 +77,12 @@
   max-width: 107.34px;
   background-color: transparent;
   border: none;
+  opacity: .7;
 }
 
 .profile__edit-button:hover {
   cursor: pointer;
-  opacity: 0.7;
+  opacity: 1;
 }
 
 .profile__edit-logo {
